{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 635,
  "lineage": "c1fcc1ca-9519-20e9-6f03-39729e4b9ee2",
  "resources": [
    {
      "module": "module.main[\"a\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkInterfaces/pinetest-a-network",
            "internal_domain_name_suffix": "narsdisk1z3edcljagbhr5w2xd.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "pinetest-a-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pinetest-a-ip",
                "subnet_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-a-vnet/subnets/pinetest-a-subnet"
              }
            ],
            "location": "uksouth",
            "name": "pinetest-a-network",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "krishangs_resource"
          },
          "dependencies": [
            "module.main.azurerm_public_ip.main",
            "module.main.azurerm_subnet.subnet",
            "module.main.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.main[\"a\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkSecurityGroups/pinetest-a",
            "location": "uksouth",
            "name": "pinetest-a",
            "resource_group_name": "krishangs_resource",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.main[\"a\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "domain_name_label": "pinetest-a",
            "fqdn": "pinetest-a.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pinetest-a-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.117.85.43",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pinetest-a-ip",
            "resource_group_name": "krishangs_resource",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.main[\"a\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-a-vnet/subnets/pinetest-a-subnet",
            "name": "pinetest-a-subnet",
            "resource_group_name": "krishangs_resource",
            "virtual_network_name": "pinetest-a-vnet"
          },
          "dependencies": [
            "module.main.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.main[\"a\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a2212368-de4a-417a-8969-018278fedcbb",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-a-vnet",
            "location": "uksouth",
            "name": "pinetest-a-vnet",
            "resource_group_name": "krishangs_resource",
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "module": "module.main[\"b\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkInterfaces/pinetest-b-network",
            "internal_domain_name_suffix": "0ywebcxoj3jetiunz14syk1kpa.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "pinetest-b-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pinetest-b-ip",
                "subnet_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-b-vnet/subnets/pinetest-b-subnet"
              }
            ],
            "location": "uksouth",
            "name": "pinetest-b-network",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "krishangs_resource"
          },
          "dependencies": [
            "module.main.azurerm_public_ip.main",
            "module.main.azurerm_subnet.subnet",
            "module.main.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.main[\"b\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkSecurityGroups/pinetest-b",
            "location": "uksouth",
            "name": "pinetest-b",
            "resource_group_name": "krishangs_resource",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.main[\"b\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "domain_name_label": "pinetest-b",
            "fqdn": "pinetest-b.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pinetest-b-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.117.87.4",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pinetest-b-ip",
            "resource_group_name": "krishangs_resource",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.main[\"b\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-b-vnet/subnets/pinetest-b-subnet",
            "name": "pinetest-b-subnet",
            "resource_group_name": "krishangs_resource",
            "virtual_network_name": "pinetest-b-vnet"
          },
          "dependencies": [
            "module.main.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.main[\"b\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8a402cd6-4fee-4952-a28d-cefd2c2b6a78",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-b-vnet",
            "location": "uksouth",
            "name": "pinetest-b-vnet",
            "resource_group_name": "krishangs_resource",
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "module": "module.main[\"c\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkInterfaces/pinetest-c-network",
            "internal_domain_name_suffix": "uamq5aiz3bhefick12auibwrgh.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "pinetest-c-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pinetest-c-ip",
                "subnet_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-c-vnet/subnets/pinetest-c-subnet"
              }
            ],
            "location": "uksouth",
            "name": "pinetest-c-network",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "krishangs_resource"
          },
          "dependencies": [
            "module.main.azurerm_public_ip.main",
            "module.main.azurerm_subnet.subnet",
            "module.main.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.main[\"c\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkSecurityGroups/pinetest-c",
            "location": "uksouth",
            "name": "pinetest-c",
            "resource_group_name": "krishangs_resource",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.main[\"c\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "domain_name_label": "pinetest-c",
            "fqdn": "pinetest-c.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pinetest-c-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.117.85.119",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pinetest-c-ip",
            "resource_group_name": "krishangs_resource",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.main[\"c\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-c-vnet/subnets/pinetest-c-subnet",
            "name": "pinetest-c-subnet",
            "resource_group_name": "krishangs_resource",
            "virtual_network_name": "pinetest-c-vnet"
          },
          "dependencies": [
            "module.main.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.main[\"c\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "810f19a0-e819-424e-a04a-df014406d137",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-c-vnet",
            "location": "uksouth",
            "name": "pinetest-c-vnet",
            "resource_group_name": "krishangs_resource",
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "module": "module.main[\"d\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkInterfaces/pinetest-d-network",
            "internal_domain_name_suffix": "yw0yksim4gfutplug5eko5y0be.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "pinetest-d-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pinetest-d-ip",
                "subnet_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-d-vnet/subnets/pinetest-d-subnet"
              }
            ],
            "location": "uksouth",
            "name": "pinetest-d-network",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "krishangs_resource"
          },
          "dependencies": [
            "module.main.azurerm_public_ip.main",
            "module.main.azurerm_subnet.subnet",
            "module.main.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.main[\"d\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkSecurityGroups/pinetest-d",
            "location": "uksouth",
            "name": "pinetest-d",
            "resource_group_name": "krishangs_resource",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.main[\"d\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "domain_name_label": "pinetest-d",
            "fqdn": "pinetest-d.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pinetest-d-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.117.87.11",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pinetest-d-ip",
            "resource_group_name": "krishangs_resource",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.main[\"d\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-d-vnet/subnets/pinetest-d-subnet",
            "name": "pinetest-d-subnet",
            "resource_group_name": "krishangs_resource",
            "virtual_network_name": "pinetest-d-vnet"
          },
          "dependencies": [
            "module.main.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.main[\"d\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4985b5c5-f10c-498b-bd74-37c8a77f1a0c",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-d-vnet",
            "location": "uksouth",
            "name": "pinetest-d-vnet",
            "resource_group_name": "krishangs_resource",
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "module": "module.main[\"e\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkInterfaces/pinetest-e-network",
            "internal_domain_name_suffix": "hb0zq5n50tfe3hfmvtf02c3uva.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "pinetest-e-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pinetest-e-ip",
                "subnet_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-e-vnet/subnets/pinetest-e-subnet"
              }
            ],
            "location": "uksouth",
            "name": "pinetest-e-network",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "krishangs_resource"
          },
          "dependencies": [
            "module.main.azurerm_public_ip.main",
            "module.main.azurerm_subnet.subnet",
            "module.main.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.main[\"e\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkSecurityGroups/pinetest-e",
            "location": "uksouth",
            "name": "pinetest-e",
            "resource_group_name": "krishangs_resource",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.main[\"e\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "domain_name_label": "pinetest-e",
            "fqdn": "pinetest-e.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pinetest-e-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.117.86.121",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pinetest-e-ip",
            "resource_group_name": "krishangs_resource",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.main[\"e\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-e-vnet/subnets/pinetest-e-subnet",
            "name": "pinetest-e-subnet",
            "resource_group_name": "krishangs_resource",
            "virtual_network_name": "pinetest-e-vnet"
          },
          "dependencies": [
            "module.main.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.main[\"e\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7d987538-d4bf-4eca-9cac-accbae0bb4a8",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-e-vnet",
            "location": "uksouth",
            "name": "pinetest-e-vnet",
            "resource_group_name": "krishangs_resource",
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "module": "module.main[\"f\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkInterfaces/pinetest-f-network",
            "internal_domain_name_suffix": "xwgp2mtkzevuxltcz3gzxn2ifg.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "pinetest-f-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pinetest-f-ip",
                "subnet_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-f-vnet/subnets/pinetest-f-subnet"
              }
            ],
            "location": "uksouth",
            "name": "pinetest-f-network",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "krishangs_resource"
          },
          "dependencies": [
            "module.main.azurerm_public_ip.main",
            "module.main.azurerm_subnet.subnet",
            "module.main.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.main[\"f\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkSecurityGroups/pinetest-f",
            "location": "uksouth",
            "name": "pinetest-f",
            "resource_group_name": "krishangs_resource",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.main[\"f\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "domain_name_label": "pinetest-f",
            "fqdn": "pinetest-f.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pinetest-f-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.117.81.107",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pinetest-f-ip",
            "resource_group_name": "krishangs_resource",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.main[\"f\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-f-vnet/subnets/pinetest-f-subnet",
            "name": "pinetest-f-subnet",
            "resource_group_name": "krishangs_resource",
            "virtual_network_name": "pinetest-f-vnet"
          },
          "dependencies": [
            "module.main.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.main[\"f\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "32fe8cbd-c96a-4b2b-ae62-cf4d9bb7882e",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-f-vnet",
            "location": "uksouth",
            "name": "pinetest-f-vnet",
            "resource_group_name": "krishangs_resource",
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "module": "module.main[\"g\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkInterfaces/pinetest-g-network",
            "internal_domain_name_suffix": "3o141sdwjpsu3fmjwzsdqlkvyf.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "pinetest-g-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pinetest-g-ip",
                "subnet_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-g-vnet/subnets/pinetest-g-subnet"
              }
            ],
            "location": "uksouth",
            "name": "pinetest-g-network",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "krishangs_resource"
          },
          "dependencies": [
            "module.main.azurerm_public_ip.main",
            "module.main.azurerm_subnet.subnet",
            "module.main.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.main[\"g\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkSecurityGroups/pinetest-g",
            "location": "uksouth",
            "name": "pinetest-g",
            "resource_group_name": "krishangs_resource",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.main[\"g\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "domain_name_label": "pinetest-g",
            "fqdn": "pinetest-g.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pinetest-g-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.117.83.205",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pinetest-g-ip",
            "resource_group_name": "krishangs_resource",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.main[\"g\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-g-vnet/subnets/pinetest-g-subnet",
            "name": "pinetest-g-subnet",
            "resource_group_name": "krishangs_resource",
            "virtual_network_name": "pinetest-g-vnet"
          },
          "dependencies": [
            "module.main.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.main[\"g\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c8edb7eb-4b76-4ee5-9589-b664382d55c5",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-g-vnet",
            "location": "uksouth",
            "name": "pinetest-g-vnet",
            "resource_group_name": "krishangs_resource",
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "module": "module.main[\"h\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkInterfaces/pinetest-h-network",
            "internal_domain_name_suffix": "44bpqdy4avtelokqp5fz3zkoyc.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "pinetest-h-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pinetest-h-ip",
                "subnet_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-h-vnet/subnets/pinetest-h-subnet"
              }
            ],
            "location": "uksouth",
            "name": "pinetest-h-network",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "krishangs_resource"
          },
          "dependencies": [
            "module.main.azurerm_public_ip.main",
            "module.main.azurerm_subnet.subnet",
            "module.main.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.main[\"h\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkSecurityGroups/pinetest-h",
            "location": "uksouth",
            "name": "pinetest-h",
            "resource_group_name": "krishangs_resource",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.main[\"h\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "domain_name_label": "pinetest-h",
            "fqdn": "pinetest-h.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pinetest-h-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.117.85.125",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pinetest-h-ip",
            "resource_group_name": "krishangs_resource",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.main[\"h\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-h-vnet/subnets/pinetest-h-subnet",
            "name": "pinetest-h-subnet",
            "resource_group_name": "krishangs_resource",
            "virtual_network_name": "pinetest-h-vnet"
          },
          "dependencies": [
            "module.main.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.main[\"h\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "0ff882f7-051e-4566-b950-7fcb9ee54ec2",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-h-vnet",
            "location": "uksouth",
            "name": "pinetest-h-vnet",
            "resource_group_name": "krishangs_resource",
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "module": "module.main[\"i\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkInterfaces/pinetest-i-network",
            "internal_domain_name_suffix": "k2vrwkzcx3mevbm0izoccjdyrf.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "pinetest-i-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pinetest-i-ip",
                "subnet_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-i-vnet/subnets/pinetest-i-subnet"
              }
            ],
            "location": "uksouth",
            "name": "pinetest-i-network",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "krishangs_resource"
          },
          "dependencies": [
            "module.main.azurerm_public_ip.main",
            "module.main.azurerm_subnet.subnet",
            "module.main.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.main[\"i\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkSecurityGroups/pinetest-i",
            "location": "uksouth",
            "name": "pinetest-i",
            "resource_group_name": "krishangs_resource",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.main[\"i\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "domain_name_label": "pinetest-i",
            "fqdn": "pinetest-i.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pinetest-i-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.117.85.141",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pinetest-i-ip",
            "resource_group_name": "krishangs_resource",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.main[\"i\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-i-vnet/subnets/pinetest-i-subnet",
            "name": "pinetest-i-subnet",
            "resource_group_name": "krishangs_resource",
            "virtual_network_name": "pinetest-i-vnet"
          },
          "dependencies": [
            "module.main.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.main[\"i\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2b1b2b57-bf22-4a58-859a-465c2124788d",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-i-vnet",
            "location": "uksouth",
            "name": "pinetest-i-vnet",
            "resource_group_name": "krishangs_resource",
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "module": "module.main[\"j\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkInterfaces/pinetest-j-network",
            "internal_domain_name_suffix": "lwhwcq30s5ge5byw1110uct3oc.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "pinetest-j-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pinetest-j-ip",
                "subnet_id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-j-vnet/subnets/pinetest-j-subnet"
              }
            ],
            "location": "uksouth",
            "name": "pinetest-j-network",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "krishangs_resource"
          },
          "dependencies": [
            "module.main.azurerm_public_ip.main",
            "module.main.azurerm_subnet.subnet",
            "module.main.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.main[\"j\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/networkSecurityGroups/pinetest-j",
            "location": "uksouth",
            "name": "pinetest-j",
            "resource_group_name": "krishangs_resource",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.main[\"j\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "domain_name_label": "pinetest-j",
            "fqdn": "pinetest-j.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/publicIPAddresses/pinetest-j-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.117.83.103",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pinetest-j-ip",
            "resource_group_name": "krishangs_resource",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.main[\"j\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-j-vnet/subnets/pinetest-j-subnet",
            "name": "pinetest-j-subnet",
            "resource_group_name": "krishangs_resource",
            "virtual_network_name": "pinetest-j-vnet"
          },
          "dependencies": [
            "module.main.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.main[\"j\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "43618f5d-97ba-4fcc-8716-def7aa0a7d72",
            "id": "/subscriptions/6a1c9c00-ef6b-4bbf-a3f1-ca2c019f31e9/resourceGroups/krishangs_resource/providers/Microsoft.Network/virtualNetworks/pinetest-j-vnet",
            "location": "uksouth",
            "name": "pinetest-j-vnet",
            "resource_group_name": "krishangs_resource",
            "vm_protection_enabled": false
          }
        }
      ]
    }
  ]
}